--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Grant Foundation</title>
+    <title>Meta Foundation</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans:wght@500&display=swap" rel="stylesheet">
@@ -49,7 +49,7 @@
     <!-- NavBar -->
     
     <header class="nav">
-    <img class="logo" src="img\lOGO/—Pngtree—green energy_4362745.png" alt="">
+    <img class="logo" src="img\logo/—Pngtree—green energy_4362745.png" alt="">
     <nav>
          <ul class="nav_links">
             <li class="item"><a href="#">Home</a></li>
